Write a couple of tests

--- a/Showcases.ipynb
+++ b/Showcases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,196 +32,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
     "X, y = make_classification(n_samples=100000)\n",
     "n_job_1_random_forest = RandomForestClassifierCustom(\n",
-    "    max_depth=30, n_estimators=10, max_features=2, random_state=42\n",
+    "    max_depth=30, n_estimators=100, max_features=8, random_state=42\n",
     ")\n",
     "n_job_2_random_forest = RandomForestClassifierCustom(\n",
-    "    max_depth=30, n_estimators=10, max_features=2, random_state=42\n",
+    "    max_depth=30, n_estimators=100, max_features=8, random_state=42\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 609 ms, sys: 1.31 s, total: 1.92 s\n",
-      "Wall time: 27 s\n"
+      "CPU times: user 51.7 ms, sys: 110 ms, total: 161 ms\n",
+      "Wall time: 2min 32s\n",
+      "CPU times: user 57.4 ms, sys: 134 ms, total: 191 ms\n",
+      "Wall time: 1min 29s\n"
      ]
     }
    ],
    "source": [
-    "# %time n_job_1_random_forest.fit(X,y,n_jobs=1)\n",
+    "%time n_job_1_random_forest.fit(X,y,n_jobs=1)\n",
     "\n",
     "%time n_job_2_random_forest.fit(X,y,n_jobs=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "DecisionTreeClassifier(max_depth=30, max_features=2, random_state=42)\n"
+      "CPU times: user 39.4 ms, sys: 140 ms, total: 180 ms\n",
+      "Wall time: 3 s\n",
+      "CPU times: user 65.9 ms, sys: 199 ms, total: 265 ms\n",
+      "Wall time: 2.28 s\n"
      ]
     }
    ],
-   "source": [
-    "for i, tree in enumerate(n_job_2_random_forest.trees[0]):\n",
-    "    print(i)\n",
-    "    print\n",
-    "    print(tree)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Process SpawnProcess-25:\n",
-      "Process SpawnProcess-26:\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/multiprocessing/process.py\", line 314, in _bootstrap\n",
-      "    self.run()\n",
-      "  File \"/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/multiprocessing/process.py\", line 108, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/concurrent/futures/process.py\", line 246, in _process_worker\n",
-      "    call_item = call_queue.get(block=True)\n",
-      "                ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/multiprocessing/queues.py\", line 122, in get\n",
-      "    return _ForkingPickler.loads(res)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AttributeError: Can't get attribute 'sum_four' on <module '__main__' (<class '_frozen_importlib.BuiltinImporter'>)>\n",
-      "  File \"/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/multiprocessing/process.py\", line 314, in _bootstrap\n",
-      "    self.run()\n",
-      "  File \"/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/multiprocessing/process.py\", line 108, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/concurrent/futures/process.py\", line 246, in _process_worker\n",
-      "    call_item = call_queue.get(block=True)\n",
-      "                ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/multiprocessing/queues.py\", line 122, in get\n",
-      "    return _ForkingPickler.loads(res)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "AttributeError: Can't get attribute 'sum_four' on <module '__main__' (<class '_frozen_importlib.BuiltinImporter'>)>\n"
-     ]
-    },
-    {
-     "ename": "BrokenProcessPool",
-     "evalue": "A process in the process pool was terminated abruptly while the future was running or pending.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mBrokenProcessPool\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m args_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m(repeat(a), repeat(b), repeat(c), all_d_values)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m ProcessPoolExecutor(max_workers\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m pool:\n\u001b[0;32m---> 20\u001b[0m     res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43msum_four\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs_list\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(res)\n",
-      "File \u001b[0;32m~/mambaforge/envs/ds/lib/python3.12/concurrent/futures/process.py:608\u001b[0m, in \u001b[0;36m_chain_from_iterable_of_lists\u001b[0;34m(iterable)\u001b[0m\n\u001b[1;32m    602\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_chain_from_iterable_of_lists\u001b[39m(iterable):\n\u001b[1;32m    603\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    604\u001b[0m \u001b[38;5;124;03m    Specialized implementation of itertools.chain.from_iterable.\u001b[39;00m\n\u001b[1;32m    605\u001b[0m \u001b[38;5;124;03m    Each item in *iterable* should be a list.  This function is\u001b[39;00m\n\u001b[1;32m    606\u001b[0m \u001b[38;5;124;03m    careful not to keep references to yielded objects.\u001b[39;00m\n\u001b[1;32m    607\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 608\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43melement\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43miterable\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m    609\u001b[0m \u001b[43m        \u001b[49m\u001b[43melement\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreverse\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    610\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mwhile\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43melement\u001b[49m\u001b[43m:\u001b[49m\n",
-      "File \u001b[0;32m~/mambaforge/envs/ds/lib/python3.12/concurrent/futures/_base.py:619\u001b[0m, in \u001b[0;36mExecutor.map.<locals>.result_iterator\u001b[0;34m()\u001b[0m\n\u001b[1;32m    616\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m fs:\n\u001b[1;32m    617\u001b[0m     \u001b[38;5;66;03m# Careful not to keep a reference to the popped future\u001b[39;00m\n\u001b[1;32m    618\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 619\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m \u001b[43m_result_or_cancel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    620\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    621\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m _result_or_cancel(fs\u001b[38;5;241m.\u001b[39mpop(), end_time \u001b[38;5;241m-\u001b[39m time\u001b[38;5;241m.\u001b[39mmonotonic())\n",
-      "File \u001b[0;32m~/mambaforge/envs/ds/lib/python3.12/concurrent/futures/_base.py:317\u001b[0m, in \u001b[0;36m_result_or_cancel\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m    315\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    316\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 317\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfut\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    319\u001b[0m         fut\u001b[38;5;241m.\u001b[39mcancel()\n",
-      "File \u001b[0;32m~/mambaforge/envs/ds/lib/python3.12/concurrent/futures/_base.py:456\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    454\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CancelledError()\n\u001b[1;32m    455\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;241m==\u001b[39m FINISHED:\n\u001b[0;32m--> 456\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__get_result\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    457\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    458\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m()\n",
-      "File \u001b[0;32m~/mambaforge/envs/ds/lib/python3.12/concurrent/futures/_base.py:401\u001b[0m, in \u001b[0;36mFuture.__get_result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    399\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception:\n\u001b[1;32m    400\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 401\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception\n\u001b[1;32m    402\u001b[0m     \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    403\u001b[0m         \u001b[38;5;66;03m# Break a reference cycle with the exception in self._exception\u001b[39;00m\n\u001b[1;32m    404\u001b[0m         \u001b[38;5;28mself\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mBrokenProcessPool\u001b[0m: A process in the process pool was terminated abruptly while the future was running or pending."
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import functools\n",
-    "from itertools import repeat\n",
-    "from sklearn.base import BaseEstimator\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
-    "from concurrent.futures import ProcessPoolExecutor\n",
-    "\n",
-    "\n",
-    "def sum_four(a, b, c, d):\n",
-    "    return d\n",
-    "\n",
-    "\n",
-    "a, b, c = 1, 2, 3\n",
-    "\n",
-    "all_d_values = [1, 2, 3, 10]\n",
-    "\n",
-    "# partial_sum_four = functools.partial(sum_four, a, b, c)\n",
-    "\n",
-    "with ProcessPoolExecutor(max_workers=2) as pool:\n",
-    "    res = list(pool.map(sum_four, repeat(a), repeat(b), repeat(c), all_d_values))\n",
-    "\n",
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "repeat(1)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "repeat(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x111a1fbf0>>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
-      "    def _clean_thread_parent_frames(\n",
-      "\n",
-      "KeyboardInterrupt: \n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "import requests\n",
-    "\n",
-    "n_requests = 10\n",
-    "n_proc = 10\n",
-    "repeat(\"https://google.com/\")\n",
-    "with ProcessPoolExecutor(n_proc) as pool:\n",
-    "    results = pool.map(requests.get, repeat(\"https://google.com/\"))\n",
-    "    print(type(results), list(results)[:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%time n_jobs_1_pred = n_job_1_random_forest.predict(X, n_jobs=1)\n",
     "\n",
@@ -230,45 +91,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 798 µs, sys: 780 µs, total: 1.58 ms\n",
-      "Wall time: 1.44 ms\n",
-      "CPU times: user 726 µs, sys: 494 µs, total: 1.22 ms\n",
-      "Wall time: 976 µs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/site-packages/numpy/core/fromnumeric.py:3504: RuntimeWarning: Mean of empty slice.\n",
-      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "/Users/m.trofimov/mambaforge/envs/ds/lib/python3.12/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ret = ret.dtype.type(ret / rcount)\n",
-      "/Users/m.trofimov/Dropbox/Study/BI/pyth/das_biotools/custom_random_forest.py:67: RuntimeWarning: invalid value encountered in cast\n",
-      "  return np.mean(predictions, axis=0).astype(int)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "-9223372036854775808"
+       "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n_jobs_1_pred == n_jobs_2_pred"
+    "all(n_jobs_1_pred == n_jobs_2_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
